Changed btn-danger to teal

--- a/Band-Website/styles.css
+++ b/Band-Website/styles.css
@@ -294,7 +294,7 @@ html, body {
 
 .btn-danger {
 	color: white;
-	background-color: maroon;
+	background-color: teal;
 	border: none;
 	border-radius: 20em;
 	font-weight: bold;
